@@ -1,15 +1,5 @@
 package epicsquid.blockcraftery.model;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.function.Function;
-
-import javax.vecmath.Matrix4f;
-
-import org.apache.commons.lang3.tuple.Pair;
-
 import epicsquid.mysticallib.model.CustomModelBase;
 import epicsquid.mysticallib.model.DefaultTransformations;
 import epicsquid.mysticallib.model.ModelUtil;
@@ -24,61 +14,69 @@ import net.minecraft.client.renderer.vertex.VertexFormat;
 import net.minecraft.util.EnumFacing;
 import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.common.model.IModelState;
+import org.apache.commons.lang3.tuple.Pair;
+
+import javax.vecmath.Matrix4f;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.function.Function;
 
 public class BakedModelEditableCube extends BakedModelEditable {
-  public static Map<String, List<BakedQuad>> data = new HashMap<>();
-  Cube cube;
+	public static Map<String, List<BakedQuad>> data = new HashMap<>();
+	Cube cube;
 
-  public BakedModelEditableCube(IModelState state, VertexFormat format, Function<ResourceLocation, TextureAtlasSprite> bakedTextureGetter,
-      CustomModelBase model) {
-    super(state, format, bakedTextureGetter, model);
-    cube = ModelUtil
-        .makeCube(format, 0, 0, 0, 1, 1, 1, ModelUtil.FULL_FACES, new TextureAtlasSprite[] { texwest, texeast, texdown, texup, texnorth, texsouth }, 0);
-  }
+	public BakedModelEditableCube(IModelState state, VertexFormat format, Function<ResourceLocation, TextureAtlasSprite> bakedTextureGetter,
+								  CustomModelBase model) {
+		super(state, format, bakedTextureGetter, model);
+		this.cube = ModelUtil
+			.makeCube(format, 0, 0, 0, 1, 1, 1, ModelUtil.FULL_FACES, new TextureAtlasSprite[]{this.texwest, this.texeast, this.texdown, this.texup, this.texnorth, this.texsouth}, 0);
+	}
 
-  @Override
-  public boolean isAmbientOcclusion() {
-    return true;
-  }
+	@Override
+	public boolean isAmbientOcclusion() {
+		return true;
+	}
 
-  @Override
-  public boolean isGui3d() {
-    return true;
-  }
+	@Override
+	public boolean isGui3d() {
+		return true;
+	}
 
-  @Override
-  public boolean isBuiltInRenderer() {
-    return false;
-  }
+	@Override
+	public boolean isBuiltInRenderer() {
+		return false;
+	}
 
-  @Override
-  public TextureAtlasSprite getParticleTexture() {
-    return particle;
-  }
+	@Override
+	public TextureAtlasSprite getParticleTexture() {
+		return this.particle;
+	}
 
-  @Override
-  public ItemOverrideList getOverrides() {
-    return new ItemOverrideList(Arrays.asList());
-  }
+	@Override
+	public ItemOverrideList getOverrides() {
+		return new ItemOverrideList(List.of());
+	}
 
-  @Override
-  public Pair<? extends IBakedModel, javax.vecmath.Matrix4f> handlePerspective(ItemCameraTransforms.TransformType type) {
-    Matrix4f matrix = null;
-    if (DefaultTransformations.blockTransforms.containsKey(type)) {
-      matrix = DefaultTransformations.blockTransforms.get(type).getMatrix();
-      return Pair.of(this, matrix);
-    }
-    return net.minecraftforge.client.ForgeHooksClient.handlePerspective(this, type);
-  }
+	@Override
+	public Pair<? extends IBakedModel, javax.vecmath.Matrix4f> handlePerspective(ItemCameraTransforms.TransformType type) {
+		Matrix4f matrix = null;
+		if (DefaultTransformations.blockTransforms.containsKey(type)) {
+			matrix = DefaultTransformations.blockTransforms.get(type).getMatrix();
+			return Pair.of(this, matrix);
+		}
+		return net.minecraftforge.client.ForgeHooksClient.handlePerspective(this, type);
+	}
 
-  @Override
-  public void addGeometry(List<BakedQuad> quads, EnumFacing side, IBlockState state, TextureAtlasSprite[] texes, int tintIndex) {
-    ModelUtil.makeCube(format, 0, 0, 0, 1, 1, 1, ModelUtil.FULL_FACES, texes, tintIndex).addToList(quads, side);
-  }
+	@Override
+	public void addGeometry(List<BakedQuad> quads, EnumFacing side, IBlockState state, TextureAtlasSprite[] texes, int tintIndex) {
+		ModelUtil.makeCube(this.format, 0, 0, 0, 1, 1, 1, ModelUtil.FULL_FACES, texes, tintIndex).addToList(quads, side);
+	}
 
-  @Override
-  public void addItemModel(List<BakedQuad> quads, EnumFacing side) {
-    cube.addToList(quads, side);
-  }
+	@Override
+	public void addItemModel(List<BakedQuad> quads, EnumFacing side) {
+		this.cube.addToList(quads, side);
+	}
 
 }
